// Copyright 2023-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package vanguard.test.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// RestrictedService is a service that has methods with unsupported request and response types.
service RestrictedService {
  // BidiStream is a bidi stream, unsupported request and response type.
  rpc BidiStream(stream google.protobuf.Empty) returns (stream google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/streams/bidi"
      body: "*"
    };
  }
  // ClientStream is a client stream, unsupported request type.
  rpc ClientStream(stream google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/streams/client"
      body: "*"
    };
  }
  // ServerStream is a server stream, unsupported response type.
  rpc ServerStream(google.protobuf.Empty) returns (stream google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/streams/server"
      body: "*"
    };
  }
}
